--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
   <!-- First Photo Grid-->
   <div class="w3-row-padding w3-padding-16 w3-center">
     <div class="w3-col s4">
-		<a href="The_Craft_House.html" target="_self"><img src="image/TCH.png" alt="The Craft House" class="w3-image" style="object-fit: cover; height: 300px; width: 100%"></a>
-		<a href="The_Craft_House.html" target="_self" style="text-decoration: none;"><p>The Craft House</p></a>
+		<a href="The_Craft_House.php" target="_self"><img src="image/TCH.png" alt="The Craft House" class="w3-image" style="object-fit: cover; height: 300px; width: 100%"></a>
+		<a href="The_Craft_House.php" target="_self" style="text-decoration: none;"><p>The Craft House</p></a>
 	  </div>
     <div class="w3-col s4" style="max-height: 300px">
 		<img src="image/VNH.jpg" alt="Vietnam Handicraft" class="w3-image" style="object-fit: cover; height: 300px; width: 100%">
