--- a/The_Craft_House.html
+++ b/The_Craft_House.html
@@ -15,7 +15,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
 <div class="w3-top">
   <div class="w3-white w3-xlarge" style="max-width:1200px;margin:auto">
     <div class="w3-right w3-padding-16"></div>
-    <div class="w3-center w3-padding-16">Local Art</div>
+    <div class="w3-center w3-padding-16"><a href="index.html" target="_self" style="text-decoration: none">Local Art</a></div>
   </div>
 </div>
 
